--- a/views/employee/front.hbs
+++ b/views/employee/front.hbs
@@ -29,12 +29,12 @@
           <div class="form-group">
             <label for="exampleInputEmail1">Email address</label>
             <input type="text" class="form-control" id="username" aria-describedby="emailHelp"
-              placeholder="Enter email">
+              placeholder="Enter email"  autocomplete="off">
 
           </div>
           <div class="form-group">
             <label for="exampleInputPassword1">Password</label>
-            <input type="password" class="form-control" id="pass" placeholder="Password">
+            <input type="password" class="form-control" id="pass" placeholder="Password" autocomplete="off">
           </div>
 
           <button type="submit" class="btn btn-primary" onclick="func()">Submit</button>
